_sass/haackbar/_header.scss
/**
 * Site header
 */
.header {
  background-color: $header-background-color;
  height: 100%;
  left: 0;
  overflow-x: hidden;
  padding: 1%;
  position: fixed;
  top: 0;
  width: $sidebar-width;
  z-index: 1;

  a:hover {
    color: $brand-color;
  }

  .social-media-list {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
    margin: 0 auto;
    width: 60%;

    li {
      display: block;
      margin: 0;
      padding: 0;

      .svg-icon {
        fill: $background-color;
        height: 24px;
        width: 24px;

        &:hover {
          fill: $brand-color;
          transition: fill .3s;
        }
      }

      span {
        display: none;
      }
    }
  }
}

.social-footer {
  background-color: $header-background-color;
  bottom: 0;
  height: 80px;
  left: 0;
  position: absolute;
  width: 100%;

  // If screen is resized too small, plop the footer in the bottom
  @media screen and (max-height: 600px) {
    position: relative;
  }
}

.site-header {
  margin: 16% auto 10% 10%;
  width: 60%;

  @include media-query($on-mobile) {
    margin: 5% auto 10%;
    text-align: center;
  }
}

.profilepic {
  margin-bottom: 10%;

  img {
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    display: block;
    margin: 0;
    width: 160px;
    
    @include media-query($on-mobile) {
      margin: 0 auto;
    }
  }
}

.site-title {
  @include relative-font-size(3);
  @include relative-font-weight(2.5);
  font-family: $title-font-family;
  color: $background-color;
  line-height: $base-line-height * $base-font-size * 1.7;
  text-transform: capitalize;

  &,
  &:visited {
    color: $background-color;
  }
}

.site-subtitle {
  @include relative-font-size(3);
  color: darken($grey-color, 15%);
  font-size: 21px;
  font-style: italic;
}

.site-nav {
  line-height: $base-line-height * $base-font-size * 1;

  ul {
    list-style-type: none;
    margin-left: 0;
    padding-top: 10%;

    li {
      @include relative-font-size(1.3);
      @include relative-font-weight(.7);
      color: $grey-color-light;
      letter-spacing: 1px;
      line-height: $base-line-height;
      text-transform: lowercase;

      a {
        color: $grey-color-light;

        &:hover {
          text-decoration: none;
        }
      }

      &.current-page {
        background: $background-color;
        color: $text-color;
        margin-left: -5px;
        padding-left: 5px;
        width: $sidebar-width;
      }
    }
  }
}

@include media-query($on-mobile) {
  body .header {
    float: none;
    position: relative;
    width: 100%;

    .social-footer {
      height: auto;
      position: relative;
    }

    .social-media-list {
      bottom: auto;
      height: auto;
      width: 100%;

      .svg-icon {
        height: 24px;
        width: 24px;
      }
    }

    .site-nav ul .current-page {
      background: inherit;
      color: $brand-color;
      margin-left: 0;
      padding-left: 0;
      width: inherit;
    }
  }
}

